# .nobar

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  main.py  pyproject.toml  requirements.txt
core/: app.py  arguments.py  config.py  panel.py  widgets.py
interfaces/: app.py  panel.py
modules/: info.py  workspaces.py
src/nobar/: main.py
src/nobar/core/: app.py  arguments.py  config.py  panel.py  widgets.py
src/nobar/interfaces/: app.py  panel.py
src/nobar/modules/: info.py  workspaces.py
src/nobar/modules/info/: __init__.py  battery.py  clock.py  keyboard.py  widget.py  workspace.py
