[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nobar"
version = "0.0.1"
description = "A sleek PyQt6 widget system for i3wm"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "microdot178", email = "microdot178@tuta.io" }
]
dependencies = [
    "i3ipc>=2.2.1,<3.0",
    "psutil>=7.0.0",
    "PyQt6>=6.9.0,<7.0",
    "PyQt6-Qt6>=6.9.0,<7.0",
    "PyQt6_sip>=13.10.0,<14.0",
    "python-xlib>=0.33",
    "qasync>=0.28.0",
    "setproctitle>=1.3.0",
    "xkbgroup>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "black==25.1.0",
    "click==8.2.1",
    "isort==6.0.1",
    "mypy_extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.4.0",
]

[tool.setuptools]
packages = ["core", "images", "modules", "interfaces"]
