[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nobar"
version = "0.0.1"
description = "A PyQt6 widget system for i3wm"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "microdot178", email = "microdot178@tuta.io" }
]
dependencies = [
    "i3ipc>=2.2.1,<3.0",
    "psutil>=7.0.0",
    "PyQt6>=6.9.0,<7.0",
    "PyQt6-Qt6>=6.9.0,<7.0",
    "PyQt6_sip>=13.10.0,<14.0",
    "python-xlib>=0.33",
    "qasync>=0.28.0",
    "setproctitle>=1.3.0",
    "xkbgroup>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.6",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W", "B", "UP", "N", "D", "ANN"]
ignore = ["B008", "D203", "D213", "D104", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
